Added pip requirements, helper script for fetching arch packages.

--- a/arch.yaml
+++ b/arch.yaml
@@ -20,4 +20,311 @@ dotfiles:
     src: "lib/tmux.conf"
     dst: ".tmux.conf"
  
+aur_packages:
+  - brave-bin
+  - protonmail-bridge
+  - protonvpn-gui
+  - python-proton-client
+  - python-protonvpn-nm-lib
+  - spotify
+  - systray-x-git
+
+pacman_packages:
+  - accountsservice
+  - adobe-source-han-sans-cn-fonts
+  - adobe-source-han-sans-jp-fonts
+  - adobe-source-han-sans-kr-fonts
+  - alsa-firmware
+  - alsa-plugins
+  - alsa-utils
+  - arc-gtk-theme-eos
+  - arc-x-icons-theme
+  - autoconf
+  - automake
+  - b43-fwcutter
+  - base
+  - bash-completion
+  - bind
+  - binutils
+  - bison
+  - blueman
+  - bluez-utils
+  - btrfs-progs
+  - cantarell-fonts
+  - capitaine-cursors
+  - celluloid
+  - cinnamon
+  - cinnamon-translations
+  - code
+  - crda
+  - cryptsetup
+  - cups
+  - cups-filters
+  - cups-pdf
+  - device-mapper
+  - dhclient
+  - dialog
+  - diffutils
+  - dmidecode
+  - dmraid
+  - dnsmasq
+  - dosfstools
+  - downgrade
+  - duf
+  - e2fsprogs
+  - efibootmgr
+  - efitools
+  - endeavouros-keyring
+  - endeavouros-mirrorlist
+  - endeavouros-skel-xfce4
+  - endeavouros-theming
+  - endeavouros-xfce4-terminal-colors
+  - eos-apps-info
+  - eos-hooks
+  - eos-log-tool
+  - eos-qogir-icons
+  - eos-rankmirrors
+  - eos-update-notifier
+  - ethtool
+  - exfatprogs
+  - exo
+  - f2fs-tools
+  - fakeroot
+  - ffmpegthumbnailer
+  - file
+  - file-roller
+  - findutils
+  - firefox
+  - flex
+  - foomatic-db
+  - foomatic-db-engine
+  - foomatic-db-gutenprint-ppds
+  - foomatic-db-nonfree
+  - foomatic-db-nonfree-ppds
+  - foomatic-db-ppds
+  - fsarchiver
+  - galculator
+  - garcon
+  - gawk
+  - gcc
+  - gettext
+  - ghostscript
+  - git
+  - glances
+  - gnome-calculator
+  - gnome-screenshot
+  - gnome-system-monitor
+  - gnome-terminal
+  - gnu-netcat
+  - grep
+  - groff
+  - grub
+  - grub-tools
+  - grub2-theme-endeavouros
+  - gsfonts
+  - gst-libav
+  - gst-plugin-pipewire
+  - gst-plugins-bad
+  - gst-plugins-ugly
+  - gthumb
+  - gutenprint
+  - gvfs
+  - gvfs-afc
+  - gvfs-gphoto2
+  - gvfs-mtp
+  - gvfs-nfs
+  - gvfs-smb
+  - gzip
+  - haveged
+  - hdparm
+  - hwdetect
+  - hwinfo
+  - inetutils
+  - intel-ucode
+  - inxi
+  - ipw2100-fw
+  - ipw2200-fw
+  - iwd
+  - jfsutils
+  - keybase
+  - keybase-gui
+  - konsole
+  - less
+  - libdvdcss
+  - libgsf
+  - libopenraw
+  - libtool
+  - libwnck3
+  - lightdm
+  - lightdm-slick-greeter
+  - linux
+  - linux-atm
+  - linux-firmware
+  - linux-headers
+  - linux-lts
+  - logrotate
+  - lsb-release
+  - lsscsi
+  - lvm2
+  - m4
+  - make
+  - man-db
+  - man-pages
+  - mdadm
+  - meld
+  - mesa-utils
+  - mkinitcpio
+  - mkinitcpio-busybox
+  - mkinitcpio-nfs-utils
+  - mkinitcpio-openswap
+  - mlocate
+  - modemmanager
+  - mtools
+  - nano
+  - nano-syntax-highlighting
+  - nbd
+  - ndisc6
+  - nemo-fileroller
+  - nemo-image-converter
+  - nemo-preview
+  - nemo-share
+  - neofetch
+  - neovim
+  - netctl
+  - network-manager-applet
+  - networkmanager
+  - networkmanager-openvpn
+  - nfs-utils
+  - nilfs-utils
+  - nmap
+  - noto-fonts
+  - nss-mdns
+  - ntfs-3g
+  - ntp
+  - openconnect
+  - opendesktop-fonts
+  - openvpn
+  - os-prober
+  - pacman
+  - pacman-contrib
+  - parole
+  - patch
+  - pavucontrol
+  - pcurses
+  - perl
+  - pipewire-alsa
+  - pipewire-jack
+  - pipewire-media-session
+  - pipewire-pulse
+  - pkgconf
+  - pkgfile
+  - poppler-glib
+  - power-profiles-daemon
+  - ppp
+  - pptpclient
+  - pv
+  - python
+  - python-defusedxml
+  - python-distro
+  - python-jinja
+  - python-keyring
+  - python-packaging
+  - python-pythondialog
+  - python-pyxdg
+  - python-systemd
+  - rebuild-detector
+  - redshift
+  - reflector
+  - reflector-simple
+  - reiserfsprogs
+  - ristretto
+  - rp-pppoe
+  - rsync
+  - s-nail
+  - seahorse
+  - sed
+  - sg3_utils
+  - smartmontools
+  - sof-firmware
+  - splix
+  - sshfs
+  - steam
+  - sudo
+  - sysfsutils
+  - system-config-printer
+  - systemd-sysvcompat
+  - texinfo
+  - thunar
+  - thunar-archive-plugin
+  - thunar-media-tags-plugin
+  - thunar-volman
+  - thunderbird
+  - tldr
+  - tmux
+  - ttf-bitstream-vera
+  - ttf-dejavu
+  - ttf-liberation
+  - ttf-opensans
+  - tumbler
+  - unrar
+  - unzip
+  - upower
+  - usb_modeswitch
+  - usbutils
+  - vlc
+  - vpnc
+  - welcome
+  - wget
+  - which
+  - whois
+  - wireless-regdb
+  - wireless_tools
+  - wpa_supplicant
+  - xclip
+  - xdg-user-dirs
+  - xdg-user-dirs-gtk
+  - xdg-utils
+  - xed
+  - xf86-input-libinput
+  - xf86-video-intel
+  - xfce4-appfinder
+  - xfce4-battery-plugin
+  - xfce4-datetime-plugin
+  - xfce4-mount-plugin
+  - xfce4-netload-plugin
+  - xfce4-notifyd
+  - xfce4-panel
+  - xfce4-power-manager
+  - xfce4-pulseaudio-plugin
+  - xfce4-screensaver
+  - xfce4-screenshooter
+  - xfce4-session
+  - xfce4-settings
+  - xfce4-taskmanager
+  - xfce4-terminal
+  - xfce4-wavelan-plugin
+  - xfce4-weather-plugin
+  - xfce4-whiskermenu-plugin
+  - xfce4-xkb-plugin
+  - xfconf
+  - xfdesktop
+  - xfsprogs
+  - xfwm4
+  - xfwm4-themes
+  - xl2tpd
+  - xorg-server
+  - xorg-xclipboard
+  - xorg-xdpyinfo
+  - xorg-xinit
+  - xorg-xinput
+  - xorg-xkill
+  - xorg-xrandr
+  - xreader
+  - xterm
+  - yad-eos
+  - yay
+  - zsh
+  - zsh-completions
+  - zsh-syntax-highlighting
+
 ...
