--- a/lib/tmux.conf
+++ b/lib/tmux.conf
@@ -42,18 +42,19 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'jimeh/tmux-themepack'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank' # Sysclipboard 
-
+set -g @plugin 'tmux-plugins/tmux-yank' # Sysclipboard
+set -g @plugin 'tmux-plugins/tmux-logging'
 
 # All yanking is to clipboard. Also enables mouse support.
 set -g @yank_with_mouse on 
 set -g @yank_selection 'clipboard'
 set -g @yank_selection_mouse 'clipboard'
 
-
-
 # +++ Theme +++
 set -g @themepack 'powerline/double/magenta'
+
+# Set logging path
+set -g @logging-path "$HOME/tmux-log/"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
