updated init.vim and tmux config

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,8 +11,12 @@ bind-key r source-file ~/.tmux.conf \; display-message "Reloaded config!"
 set-option -g default-shell /bin/zsh
 
 # 24 bit color support
-set -ga terminal-overrides "konsole-direct:Tc"
-set -as terminal-features ',konsole-direct:clipboard'
+# set -ga terminal-overrides "konsole-direct:Tc"
+#set -as terminal-features ',konsole-direct:clipboard'
+set -ga terminal-overrides ",xterm-256color:Tc"
+
+# Set up clipboard xsel
+set -s copy-command 'xsel -i'
 
 # Count windows starting at 1.
 set -g base-index 1
